# gfxsandbox

./: CMakeLists.txt
content/: CMakeLists.txt
content/shaders/: hello.ps.glsl  hello.vs.glsl
src/: gfxsandbox.cpp  gfxsandbox.h  glutil.cpp  glutil.h  shader.cpp  shader.h  texture.cpp  texture.h  util.cpp  util.h
